[project]
name = "engage"
version = "0.1.0"
description = "City Council Engage-O-Tron"
authors = [{ name = "Dave Peck", email = "dave@frontseat.org>" }]

[tool.ruff]
exclude = ["migrations"]
line-length = 100

[tool.pyright]
include = ["server"]
typeCheckingMode = "basic"
useLibraryCodeForTypes = true
